# web-papa

./: .gitignore  README.md  TEST_URL.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: api.py  config.py  crawler.py  main.py  markdown.py  parser.py
configs/: 52pojie.yaml  80211.yaml  bilibili.yaml  coursera.yaml  csdn.yaml  default.yaml  douyin.yaml  eastmoney.yaml  gamersky.yaml  github.yaml  hupu.yaml  icourse163.yaml  iqiyi.yaml  jd.yaml  juejin.yaml  medium.yaml  meituan.yaml  open.163.yaml  people.yaml  right.com.cn.yaml  sinafinance.yaml  sports.qq.com.yaml  sports.sina.com.cn.yaml  stackoverflow.yaml  steam.yaml  taobao.yaml  taptap.yaml  thepaper.yaml  v.qq.com.yaml  wechat.yaml  weibo.yaml  xinhuanet.yaml  xueqiu.yaml  youtube.yaml  zhihu.yaml
docker/: Dockerfile
